Implement shared servers related changes  [VPNWIN-2900]

--- a/src/Client/Common/ProtonVPN.Client.Common.UI/ProtonVPN.Client.Common.UI.csproj
+++ b/src/Client/Common/ProtonVPN.Client.Common.UI/ProtonVPN.Client.Common.UI.csproj
@@ -753,6 +753,7 @@
         <None Remove="Assets\Illustrations\Light\vpn-feature-protocol.png" />
         <None Remove="Assets\Illustrations\Light\vpn-plus.svg" />
         <None Remove="Assets\Illustrations\Light\welcome.png" />
+        <None Remove="Assets\Illustrations\no-vpn-connections.png" />
         <None Remove="Assets\Illustrations\p2p-countries.png" />
         <None Remove="Assets\Illustrations\netshield.png" />
         <None Remove="Assets\Illustrations\p2p-thumbnail.png" />
@@ -2061,6 +2062,9 @@
           <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </Content>
         <Content Update="Assets\Illustrations\Light\vpn-feature-protocol.png">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </Content>
+        <Content Update="Assets\Illustrations\no-vpn-connections.png">
           <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </Content>
         <Content Update="Assets\Illustrations\p2p-thumbnail.png">
