--- a/src/StatisticalEvents/ProtonVPN.StatisticalEvents.Tests/ProtonVPN.StatisticalEvents.Tests.csproj
+++ b/src/StatisticalEvents/ProtonVPN.StatisticalEvents.Tests/ProtonVPN.StatisticalEvents.Tests.csproj
@@ -15,6 +15,7 @@
 	<ItemGroup>
 		<PackageReference Include="Microsoft.NET.Test.Sdk" />
 		<PackageReference Include="MSTest.TestFramework" />
+		<PackageReference Include="MSTest.TestAdapter" />
 	</ItemGroup>
 
 	<ItemGroup>
