--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -38,6 +38,7 @@
     <PackageVersion Include="Microsoft.Extensions.Hosting" Version="9.0.6" />
     <PackageVersion Include="Microsoft.Extensions.Hosting.WindowsServices" Version="9.0.6" />
     <PackageVersion Include="Microsoft.Extensions.Localization.Abstractions" Version="9.0.6" />
+    <PackageVersion Include="Microsoft.PowerShell.SDK" Version="7.4.11" />
     <PackageVersion Include="System.Drawing.Common" Version="9.0.6" />
     <PackageVersion Include="System.Private.Uri" Version="4.3.2" />
     <PackageVersion Include="System.Reflection.Metadata" Version="9.0.0" />
